[package]
name = "wasmedge-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
tokio_wasi = { version = "1", features = ["rt", "time", "macros"] }
redis_wasi = "0.22"
